2.2.0
  - Windows: update to libgit2 1.9.1

2.1.4
  - Fix for libgit2 1.8.2 reverting their API change from 1.8.0
  - New parameter 'force' in git_branch_create() see #239

2.1.2
  - Remove test verbosity per CRAN request
  - Update maintainer email address

2.1.1
  - No visible changes

2.1.0
  - Workaround for accidental API change in libgit2 1.8.0
  - Refactor authentication callbacks to work around new "non-api"
    calls in R >= 4.5.0. Hopefully no breakage.

2.0.1
  - Fix a printf warning for cran

2.0.0
  - Windows: update to libgit2-1.7.1 + libssh-1.11.0 + openssl-3.1.2

1.9.3
  - Add git_commit_stats() function
  - Add git_ignore_path_is_ignored() function
  - Fix protect bug in git_submodule_list()

1.9.2
  - Replace sprintf with snprintf for CRAN

1.9.1
  - Fix the Wstrict-prototype warnings
  - Use special static libgit2 bundle for openssl-3 distros.

1.9.0
  - Add support for the new ED25519 keys when authenticating over SSH

1.8.0
  - The static libgit2 for win/mac/linux are all 1.4.2 with a patched version
    of libssh 1.10.1. This should fix problems with the latest release versions
    of libgit2 and libssh2.
  - The patched libssh2 builds should now support RSA-SHA2, which re-enables
    authentication with GitHub using an RSA key.
  - On production Linux systems (x64 RHEL/Ubuntu) default to building using the
    static libgit2 because of above reasons. Set USE_SYSTEM_LIBGIT2=1 to force
    building against a local libgit2 on these platforms.

1.7.1
  - The static libgit2 for linux has been updated to 1.5.0 (this is only used
    on linux systems where no sufficient libgit2 is available).

1.7.0
  - git_status() gains parameter pathspec
  - git_ls() gains paremeter 'ref' and works with bare repositories

1.6.0
  - We recommend at least libgit2 1.0 now
  - Windows: update to libgit2 1.4.2
  - Tests: switch to ECDSA keys for ssh remote unit tests
  - git_log() gains a parameter 'after'

1.5.0