@@ -10,15 +10,16 @@ test_that("merge analysis works", {
     git_add("test.txt")
     git_commit(paste("This is commit number:", i))
   }
+  main <- git_branch()
   master_log <- git_log()
   first_commit <- tail(master_log$commit, 1)
   git_branch_create('new', first_commit)
   git_branch_checkout('new')
   expect_equal(git_log()$commit, tail(master_log,1)$commit)
-  expect_equal(git_merge_analysis('master'), 'fastforward')
+  expect_equal(git_merge_analysis(main), 'fastforward')
 
   # Expect no merge commit (ffwd)
-  git_merge("master")
+  git_merge(main)
   expect_equal(master_log, git_log())
 
   # Create a branch that diverges
@@ -27,18 +28,18 @@ test_that("merge analysis works", {
   writeLines('Something else', 'test2.txt')
   git_add('test2.txt')
   git_commit("Some other commit")
-  expect_equal(git_merge_find_base('master'), first_commit)
+  expect_equal(git_merge_find_base(main), first_commit)
 
   # Require merge commit
-  expect_equal(git_merge_analysis('master'), 'normal')
-  git_merge('master')
+  expect_equal(git_merge_analysis(main), 'normal')
+  git_merge(main)
   newlog <- git_log()
   expect_length(newlog$commit, 3)
   expect_equal(newlog$merge, c(TRUE, FALSE, FALSE))
   expect_null(git_merge_parent_heads())
 
   # Expect no changes
-  git_merge('master')
+  git_merge(main)
   expect_equal(git_log(), newlog)
 })
 
